--- a/.github/workflows/poify.yml
+++ b/.github/workflows/poify.yml
@@ -3,16 +3,22 @@ on:
   push:
     paths:
       - "data/text/**" # tra_dir
+  pull_request:
+    paths:
+      - "data/text/**" # tra_dir
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
       - name: Poify/Unpoify
         uses: BGforgeNet/msg2po@dev
         with:
-          poify: "true"
-          unpoify: "true"
-          push: "true"
+          poify: true
+          unpoify: true
+          single_commit: true
+          dir2msgstr: true
